--- a/outputs/potions_Corsair.html
+++ b/outputs/potions_Corsair.html
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Champions of {{{ brandName }}}, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
+    Champions of Corsair, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -150,7 +150,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="{{ imageSrc }}" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="https://www.method.gg/media/email/potions-min.jpg" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -159,7 +159,7 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="" class="qe_img100" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
@@ -173,12 +173,11 @@
           </tr>
 		  <tr>
            <td style="padding: 10px 0px 0px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bold; font-size: larger; text-transform:uppercase;">
-                         {{{ rowOneTitle }}}
+                         Custom Landing Pages
            </td>
           </tr>
 		  <!-- Unlock Transmutation: END -->
           <!-- Row One -->
-          {{#if rowOneImage}}
           <tr>
             <td align="left" valign="top" style="padding: 15px 10px 0px 50px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -187,7 +186,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{brandName }}} Branded {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="https://www.method.gg/media/email/custom-landing-pages-min.png" width="280" class="full-width-image" height="auto" alt="Image of Corsair Branded Custom Landing Pages" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
@@ -196,7 +195,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; vertical-align: middle; font-weight: normal;">
-                          {{{ rowOneText }}}
+                          Custom Landing Pages developed to drive High Quality & motivated Traffic to Key Product Messaging, featuring WoW-relevant Content and Method Influencers
                         </td>
                       </tr>
                     </table>
@@ -205,7 +204,6 @@
               </table>
             </td>
           </tr>
-          {{/if}}
           <!-- Two Even Columns : END -->
 		  
 		  <!-- CTA : BEGIN -->
