vertical align removal

--- a/outputs/goblin_Corsair.html
+++ b/outputs/goblin_Corsair.html
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    {{{ brandName }}} - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
+    Corsair - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -150,7 +150,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="{{ imageSrc }}" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="https://www.method.gg/media/email/important-discovery-background.jpg" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -159,7 +159,7 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url&#x3D;https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F34%2F2018%2F05%2F12170411%2Fcat-kitten-138468381.jpg&amp;q&#x3D;60" class="qe_img100" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
@@ -168,13 +168,12 @@
 		  <!-- Deliverables: BEGIN -->
 		<tr>
           <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; font-size: larger;">
-                         {{{ brandName }}} Race to World First Example Deliverables
+                         Corsair Race to World First Example Deliverables
           </td>
         </tr>
 		  <!-- Deliverables: END -->
 
           <!-- Row One -->
-          {{#if rowOneImage}}
           <tr>
             <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -183,7 +182,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowOneImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="https://www.method.gg/media/email/30s-commercial-min.jpg" width="280" class="full-width-image" height="auto" alt="Image of Commercial Integration" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
@@ -192,12 +191,12 @@
                     <table cellspacing="0" cellpadding="0" border="0">
 					  <tr>
                         <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
-                         {{{ rowOneTitle }}}
+                         Commercial Integration
                         </td>
                       </tr>
                       <tr>
                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
-                          {{{ rowOneText }}}
+                          30 Second Commercial Integration into Event Broadcast. Commercial played on all Ad Breaks approximately Once per 120 Minute of Broadcast Time.
                         </td>
                       </tr>
                     </table>
@@ -206,11 +205,9 @@
               </table>
             </td>
           </tr>
-          {{/if}}
           <!-- Two Even Columns : END -->
 
            <!-- Row Two -->
-           {{#if rowTwoImage}}
            <tr>
              <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
                <table cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -219,7 +216,7 @@
                      <table cellspacing="0" cellpadding="0" border="0">
                        <tr>
                          <td style="padding: 5px; text-align: center">
-                           <img src="{{{ rowTwoImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowTwoTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                           <img src="https://www.method.gg/media/email/custom-landing-pages-min.png" width="280" class="full-width-image" height="auto" alt="Image of Custom Landing Page" border="0" style="height:auto; max-width: 280px;">
                          </td>
                        </tr>
                      </table>
@@ -228,12 +225,12 @@
                      <table cellspacing="0" cellpadding="0" border="0">
 					 <tr>
                         <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
-                         {{{ rowTwoTitle }}}
+                         Custom Landing Page
                         </td>
                       </tr>
                        <tr>
                          <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
-                           {{{ rowTwoText }}}
+                           Custom Landing Pages developed to drive High Quality & motivated Traffic to Key Product Messaging, featuring WoW-relevant Content and Method Influencers
                          </td>
                        </tr>
                      </table>
@@ -242,11 +239,9 @@
                </table>
              </td>
            </tr>
-           {{/if}}
            <!-- Two Even Columns : END -->
 
             <!-- Row Three -->
-          {{#if rowThreeImage}}
           <tr>
             <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
@@ -255,7 +250,7 @@
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowThreeImage }}}" width="280" class="full-width-image" height="auto" alt="Image of {{{ rowThreeTitle }}}" border="0" style="height:auto; max-width: 280px;">
+                          <img src="https://www.method.gg/media/email/raid-tracker-partner-min.png" width="280" class="full-width-image" height="auto" alt="Image of Raid Tracker" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
@@ -264,12 +259,12 @@
                     <table cellspacing="0" cellpadding="0" border="0">
 					<tr>
                         <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
-                         {{{ rowThreeTitle }}}
+                         Raid Tracker
                         </td>
                       </tr>
                       <tr>
                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
-                          {{{ rowThreeText }}}
+                          Branding across High Traffic Site Locations on Method.gg including the Raid Tracker Pages
                         </td>
                       </tr>
                     </table>
@@ -278,14 +273,13 @@
               </table>
             </td>
           </tr>
-          {{/if}}
           <!-- Two Even Columns : END -->
 		  
 		 <!-- 1 Column Text : START -->
           <tr>
           <td align="center" valign="top"  style="padding: 15px 0px 20px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
-            <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="{{{ ctaLink }}}" target="_blank">
-              Download {{{ brandName }}} Race to World First Proposal
+            <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="https://drive.google.com/drive/folders/1Zh8XBT7Mvxb9_K27hoieT7VDRNvOjJbP?usp=sharing" target="_blank">
+              Download Corsair Race to World First Proposal
             </a>
           </td>
         </tr>
