--- a/outputs/goblin_Spyro.html
+++ b/outputs/goblin_Spyro.html
@@ -1,4 +1,4 @@
-  <style type="text/css">
+<style type="text/css">
 
   html,  body {
     margin: 0 !important;
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Champions of Corsair, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
+    Spyro - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -150,7 +150,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="https://www.method.gg/media/email/potions-min.jpg" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="https://www.method.gg/media/email/important-discovery-background.jpg" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -159,43 +159,44 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="" class="qe_img100" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url&#x3D;https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F34%2F2018%2F05%2F12170411%2Fcat-kitten-138468381.jpg&amp;q&#x3D;60" class="qe_img100" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
           <!-- Mobile Only Flush : END -->
+		
+		  <!-- Deliverables: BEGIN -->
+		<tr>
+          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; font-size: larger;">
+                         Spyro Race to World First Example Deliverables
+          </td>
+        </tr>
+		  <!-- Deliverables: END -->
 
-		  <!-- Unlock Transmutation: BEGIN -->
-		  <tr>
-           <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
-                         UNLOCK TRANSMUTATION:
-           </td>
-          </tr>
-		  <tr>
-           <td style="padding: 10px 0px 0px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bold; font-size: larger; text-transform:uppercase;">
-                         Custom Landing Pages
-           </td>
-          </tr>
-		  <!-- Unlock Transmutation: END -->
           <!-- Row One -->
           <tr>
-            <td align="left" valign="top" style="padding: 15px 10px 0px 50px;">
+            <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
                 <tr>
                   <td class="stack-column-center">
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="https://www.method.gg/media/email/custom-landing-pages-min.png" width="280" class="full-width-image" height="auto" alt="Image of Corsair Branded Custom Landing Pages" border="0" style="height:auto; max-width: 280px;">
+                          <img src="https://www.method.gg/media/email/treasure-segment-min.png" width="280" class="full-width-image" height="auto" alt="Image of Choose your Treasure Segment" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
                   </td>
                   <td class="stack-column-center">
                     <table cellspacing="0" cellpadding="0" border="0">
+					  <tr>
+                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
+                         Choose your Treasure Segment
+                        </td>
+                      </tr>
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; vertical-align: middle; font-weight: normal;">
-                          Custom Landing Pages developed to drive High Quality & motivated Traffic to Key Product Messaging, featuring WoW-relevant Content and Method Influencers
+                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
+                          Fully Branded "Choose Your Treasure" Segment with Play at least once per Day and bonus Plays after Boss Kill (Vault of the Incarnates Only)
                         </td>
                       </tr>
                     </table>
@@ -205,20 +206,26 @@
             </td>
           </tr>
           <!-- Two Even Columns : END -->
-		  
-		  <!-- CTA : BEGIN -->
-           <tr>
-            <td class="full-width-image" style="padding: 50px 0px 40px 0px;" align="center">
-              <a href="https://calendly.com/tom-method/method-race-to-world-first-discussion" target="_blank">
-                <img src="https://www.method.gg/media/email/book-meeting-button.png" width="255" alt="Complete Quest Button" border="0" align="center" style="width: 100%; max-width: 255px; height: auto; color: white;">
-              </a>
-            </td>
-          </tr>
-          <!-- CTA : END -->
 
-<!-- Footer -->
+           <!-- Row Two -->
+           <!-- Two Even Columns : END -->
+
+            <!-- Row Three -->
+          <!-- Two Even Columns : END -->
+		  
+		 <!-- 1 Column Text : START -->
+          <tr>
+          <td align="center" valign="top"  style="padding: 15px 0px 20px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
+            <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="" target="_blank">
+              Download Spyro Race to World First Proposal
+            </a>
+          </td>
+        </tr>
+        <!-- 1 Column Text : END -->
+
+		<!-- Footer -->
 		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: x-large;">
+          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; font-size: x-large;">
                          Razer Case Study
           </td>
         </tr>
@@ -241,7 +248,6 @@
           </td>
         </tr>
 		<!-- Unsubscribe: END -->
-		
         </table>
         <!-- Email Body : END -->
 
