Mobile / Desktop fix

--- a/outputs/potions_Corsair_mobile.html
+++ b/outputs/potions_Corsair_mobile.html
@@ -1,4 +1,4 @@
-  <style type="text/css">
+<style type="text/css">
 
   html,  body {
     margin: 0 !important;
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Champions of {{{ brandName }}}, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
+    Champions of Corsair, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -145,67 +145,49 @@
         <center style="width: 100%;">
 
         <!-- Email Body : BEGIN -->
-        <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="600" class="email-container">
+        <table cellspacing="0" cellpadding="0" border="0" align="center" bgcolor="#000000" width="100%" class="email-container">
 
-          <!-- Desktop Only, Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image qe_none">
-              <img src="{{ imageSrc }}" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-            </td>
-          </tr>
-          <!-- Desktop Only, Flush : END -->
+        <!-- Desktop Only, Flush : BEGIN -->
+        <tr>
+          <td class="full-width-image">
+            <img src="https://www.method.gg/media/email/potions-min.jpg" width="100%" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+          </td>
+        </tr>
+        <!-- Desktop Only, Flush : END -->
 
-          <!-- Mobile Only, Flush : BEGIN -->
-          <tr>
-            <td class="full-width-image">
-              <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="{{ imageSrcMobile }}" class="qe_img100" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
-              </div>
-            </td>
-          </tr>
-          <!-- Mobile Only Flush : END -->
 
 		  <!-- Unlock Transmutation: BEGIN -->
 		  <tr>
            <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
-                         UNLOCK TRANSMUTATION:
+              UNLOCK TRANSMUTATION:
            </td>
           </tr>
 		  <tr>
            <td style="padding: 10px 0px 0px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bold; font-size: larger; text-transform:uppercase;">
-                         {{{ rowOneTitle }}}
+              Custom Landing Pages
            </td>
           </tr>
 		  <!-- Unlock Transmutation: END -->
+
+
           <!-- Row One -->
-          {{#if rowOneImage}}
+           <!-- Flush : BEGIN -->
+            <tr>
+              <td class="full-width-image">
+                <img src="https://www.method.gg/media/email/custom-landing-pages-min.png" width="100%" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              </td>
+            </tr>
+            <!-- Desktop Only, Flush : END -->
+
+
+          <!-- Unlock Transmutation: BEGIN -->
           <tr>
-            <td align="left" valign="top" style="padding: 15px 10px 0px 50px;">
-              <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                <tr>
-                  <td class="stack-column-center" width="50%">
-                    <table cellspacing="0" cellpadding="0" border="0">
-                      <tr>
-                        <td style="padding: 5px; text-align: center">
-                          <img src="{{{ rowOneImage }}}" width="100%" class="full-width-image" height="auto" alt="Image of {{{brandName }}} Branded {{{ rowOneTitle }}}" border="0" style="height:auto; max-width: 280px;">
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                  <td class="stack-column-center" width="50%">
-                    <table cellspacing="0" cellpadding="0" border="0">
-                      <tr>
-                        <td width="50%" style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; font-weight: normal;">
-                          {{{ rowOneText }}}
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          {{/if}}
+              <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
+                Custom Landing Pages developed to drive High Quality & motivated Traffic to Key Product Messaging, featuring WoW-relevant Content and Method Influencers
+              </td>
+              </tr>
+          <tr>
+
           <!-- Two Even Columns : END -->
 
 		  <!-- CTA : BEGIN -->
@@ -228,7 +210,7 @@
           <tr>
             <td class="full-width-image" style="padding: 0px 20px 40px 20px;">
               <a href="https://www.method.gg/casestudy/method-x-razer" target="_blank">
-                <img src="https://www.method.gg/media/email/razer-footer-thumbnail-min.jpg" width="600" alt="Image of Razer products in glowing green neon room with city skyline in the background" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="https://www.method.gg/media/email/razer-footer-thumbnail-min.jpg" width="100%" alt="Image of Razer products in glowing green neon room with city skyline in the background" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </a>
             </td>
           </tr>
