--- a/outputs/potions_Spyro.html
+++ b/outputs/potions_Spyro.html
@@ -1,4 +1,4 @@
-<style type="text/css">
+  <style type="text/css">
 
   html,  body {
     margin: 0 !important;
@@ -135,7 +135,7 @@
 
   <!-- Visually Hidden Preheader Text -->
   <div style="display: none; max-height: 0px; overflow: hidden;">
-    Razer - Engineers of Diz'count have made an important discovery! Target the MMO+RPG Audience and receive up to 15% off Sponsorship Costs.
+    Champions of Spyro, a new Campaign Element has been fused together by our Master Alchemists. Take advantage of it's power!
   </div>
   <!-- Visually Hidden Preheader Text -->
 
@@ -150,7 +150,7 @@
           <!-- Desktop Only, Flush : BEGIN -->
           <tr>
             <td class="full-width-image qe_none">
-              <img src="https://www.method.gg/media/email/important-discovery-background.jpg" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+              <img src="https://www.method.gg/media/email/potions-min.jpg" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
             </td>
           </tr>
           <!-- Desktop Only, Flush : END -->
@@ -159,44 +159,43 @@
           <tr>
             <td class="full-width-image">
               <div class="qe_hide_desktop" style="display:none;width:0;overflow:hidden;max-height:0!important">
-                <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url&#x3D;https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F34%2F2018%2F05%2F12170411%2Fcat-kitten-138468381.jpg&amp;q&#x3D;60" class="qe_img100" width="600" alt="Goblin excitedly glaring at glowing cube with flashing discount in it's hand" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
+                <img src="" class="qe_img100" width="600" alt="Quest: 'Onwards to Northrend' with Hero Image of Gnome mixing potions into a cauldron" border="0" align="center" style="width: 100%; max-width: 600px; height: auto; color: white;">
               </div>
             </td>
           </tr>
           <!-- Mobile Only Flush : END -->
-		
-		  <!-- Deliverables: BEGIN -->
-		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline; font-size: larger;">
-                         Razer Race to World First Example Deliverables
-          </td>
-        </tr>
-		  <!-- Deliverables: END -->
 
+		  <!-- Unlock Transmutation: BEGIN -->
+		  <tr>
+           <td style="padding: 25px 0px 10px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bolder; font-size: xx-large;">
+                         UNLOCK TRANSMUTATION:
+           </td>
+          </tr>
+		  <tr>
+           <td style="padding: 10px 0px 0px 50px; text-align: left; color: white; font-family: Tahoma; font-weight: bold; font-size: larger; text-transform:uppercase;">
+                         Pre Roll Branding
+           </td>
+          </tr>
+		  <!-- Unlock Transmutation: END -->
           <!-- Row One -->
           <tr>
-            <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
+            <td align="left" valign="top" style="padding: 15px 10px 0px 50px;">
               <table cellspacing="0" cellpadding="0" border="0" width="100%">
                 <tr>
-                  <td class="stack-column-center">
+                  <td class="stack-column-center" width="50%">
                     <table cellspacing="0" cellpadding="0" border="0">
                       <tr>
                         <td style="padding: 5px; text-align: center">
-                          <img src="https://www.method.gg/media/email/full-twitch-branding-min.png" width="280" class="full-width-image" height="auto" alt="Image of Integration across all In-Stream Assets" border="0" style="height:auto; max-width: 280px;">
+                          <img src="https://www.method.gg/media/email/youtube-pre-roll-branding-min.jpg" width="100%" class="full-width-image" height="auto" alt="Image of Spyro Branded Pre Roll Branding" border="0" style="height:auto; max-width: 280px;">
                         </td>
                       </tr>
                     </table>
                   </td>
-                  <td class="stack-column-center">
+                  <td class="stack-column-center" width="50%">
                     <table cellspacing="0" cellpadding="0" border="0">
-					  <tr>
-                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
-                         Integration across all In-Stream Assets
-                        </td>
-                      </tr>
                       <tr>
-                        <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
-                          Twitch Branding of all In-Stream Elements including Static Bug with Always-On exposure, Rotating Sponsor Banner with exposure for 15 Seconds every 90 Seconds, Twitch Page Panels to drive Traffic to Product Pages & Chat Bot CTA & Link
+                        <td width="50%" style="padding: 0px 20px; text-align: center; color: white; font-family: Tahoma; font-weight: normal;">
+                          YouTube Pre Roll Branding across all Method & Method Influencer Channels for the duration of the Sponsorship period
                         </td>
                       </tr>
                     </table>
@@ -207,56 +206,19 @@
           </tr>
           <!-- Two Even Columns : END -->
 
-           <!-- Row Two -->
+		  <!-- CTA : BEGIN -->
            <tr>
-             <td align="center" valign="top" style="padding: 15px 10px 0px 10px;">
-               <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                 <tr>
-                   <td class="stack-column-center">
-                     <table cellspacing="0" cellpadding="0" border="0">
-                       <tr>
-                         <td style="padding: 5px; text-align: center">
-                           <img src="https://www.method.gg/media/email/custom-content-segments-influencer-min.jpg" width="280" class="full-width-image" height="auto" alt="Image of Promotional Rights" border="0" style="height:auto; max-width: 280px;">
-                         </td>
-                       </tr>
-                     </table>
-                   </td>
-                   <td class="stack-column-center">
-                     <table cellspacing="0" cellpadding="0" border="0">
-					 <tr>
-                        <td style="padding: 0px 20px 10px 20px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; text-decoration: underline;">
-                         Promotional Rights
-                        </td>
-                      </tr>
-                       <tr>
-                         <td style="padding: 0px 20px; text-align: center; color: white; font-family: Helvetica;">
-                           Rights to use the Method Brand Imagery within Promotional Assets and access to Method Influencers for Product Shoots
-                         </td>
-                       </tr>
-                     </table>
-                   </td>
-                 </tr>
-               </table>
-             </td>
-           </tr>
-           <!-- Two Even Columns : END -->
+            <td class="full-width-image" style="padding: 50px 0px 40px 0px;" align="center">
+              <a href="https://calendly.com/tom-method/method-race-to-world-first-discussion" target="_blank">
+                <img src="https://www.method.gg/media/email/book-meeting-button.png" width="255" alt="Complete Quest Button" border="0" align="center" style="width: 100%; max-width: 255px; height: auto; color: white;">
+              </a>
+            </td>
+          </tr>
+          <!-- CTA : END -->
 
-            <!-- Row Three -->
-          <!-- Two Even Columns : END -->
-		  
-		 <!-- 1 Column Text : START -->
-          <tr>
-          <td align="center" valign="top"  style="padding: 15px 0px 20px 0px; text-align: center; font-family: Helvetica; font-size: 15px; mso-height-rule: exactly; line-height: 20px; color: #ffffff;">
-            <a style="padding: 15px 20px; width: 60%; text-align: center; border-radius: 4px; background-color: #ff9015; display: inline-block; color: #fff !important; text-decoration: none; font-weight: bold;" href="" target="_blank">
-              Download Razer Race to World First Proposal
-            </a>
-          </td>
-        </tr>
-        <!-- 1 Column Text : END -->
-
-		<!-- Footer -->
+<!-- Footer -->
 		<tr>
-          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: bold; font-size: x-large;">
+          <td style="padding: 25px 0px 10px 0px; text-align: center; color: white; font-family: Tahoma; font-weight: bold; font-size: x-large;">
                          Razer Case Study
           </td>
         </tr>
@@ -269,9 +231,9 @@
             </td>
           </tr>
           <!-- Video Flush : END -->
-		  
+
 		<!-- Footer: END -->
-		
+
 		<!-- Unsubscribe -->
 		<tr>
           <td style="padding: 0px 0px 20px 0px; text-align: center; color: white; font-family: Helvetica; font-weight: 500; font-size: small;">
@@ -279,6 +241,7 @@
           </td>
         </tr>
 		<!-- Unsubscribe: END -->
+
         </table>
         <!-- Email Body : END -->
 
